p-24/art-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: artifactory
spec:
  rules:
  - host: "tooling.peterdada.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-artifactory
            port:
              number: 8082
  tls:
  - hosts:
    - "tooling.peterdada.me"
    secretName: "tooling.peterdada.me"
